--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <h1 class="text-5xl text-blue-600 font-bold underline">
+  <h1 class="text-5xl text-green-600 font-bold">
     Hello world!
   </h1>
   <!-- 
