--- a/index.html
+++ b/index.html
@@ -16,10 +16,27 @@
 </head>
 
 <body>
-
-  <h1 class="text-5xl text-green-600 font-bold">
-    Hello world!
-  </h1>
+  <div class="max-w-[1440] mx-auto min-h-screen">
+    <nav class="w-[83%] md:w-8/10 lg:w-[77%] mx-auto my-10">
+      <div class="container flex flex-row justify-between items-center">
+        <a href="/">
+          <img src="./images/logo-bookmark.svg" alt="logo">
+        </a>
+        <ul class="hidden w-4/10 lg:flex justify-between">
+          <li><a class="text-sm text-blue-950 hover:text-red-400 uppercase" href="#features">Features</a></li>
+          <li><a class="text-sm text-blue-950 hover:text-red-400 uppercase" href="#">Pricing</a></li>
+          <li><a class="text-sm text-blue-950 hover:text-red-400 uppercase" href="#cta">Contact</a></li>
+          <li><a
+              class="text-sm text-white border border-transparent bg-red-400 uppercase py-2 px-8 rounded-[5px] hover:bg-white hover:text-red-400 hover:border-red-400"
+              href="#">Login</a>
+          </li>
+        </ul>
+        <button class="cursor-pointer">
+          <img class="lg:hidden" src="./images/icon-hamburger.svg" alt="menu button">
+        </button>
+      </div>
+    </nav>
+  </div>
   <!-- 
   Features
   Pricing
