--- a/index.html
+++ b/index.html
@@ -16,40 +16,76 @@
 </head>
 
 <body>
-  <div class="max-w-[1440] mx-auto min-h-screen">
-    <nav class="w-[83%] md:w-8/10 lg:w-[77%] mx-auto my-10">
-      <div class="container flex flex-row justify-between items-center">
+  <div class="max-w-360 mx-auto min-h-screen min-w-93.75">
+    <header class="w-[83%] md:w-8/10 lg:w-[77%] mx-auto my-10">
+      <div class="container flex flex-row justify-between items-center w-full">
         <a href="/">
           <img src="./images/logo-bookmark.svg" alt="logo">
         </a>
-        <ul class="hidden w-4/10 lg:flex justify-between">
-          <li><a class="text-sm text-blue-950 hover:text-red-400 uppercase" href="#features">Features</a></li>
-          <li><a class="text-sm text-blue-950 hover:text-red-400 uppercase" href="#">Pricing</a></li>
-          <li><a class="text-sm text-blue-950 hover:text-red-400 uppercase" href="#cta">Contact</a></li>
-          <li><a
-              class="text-sm text-white border border-transparent bg-red-400 uppercase py-2 px-8 rounded-[5px] hover:bg-white hover:text-red-400 hover:border-red-400"
-              href="#">Login</a>
-          </li>
-        </ul>
-        <button class="cursor-pointer">
-          <img class="lg:hidden" src="./images/icon-hamburger.svg" alt="menu button">
+        <nav class="hidden lg:flex w-111.75">
+          <ul class="flex w-full gap-12 justify-between">
+            <li><a class="text-sm text-blue-950 hover:text-red-400 uppercase" href="#features">Features</a></li>
+            <li><a class="text-sm text-blue-950 hover:text-red-400 uppercase" href="#">Pricing</a></li>
+            <li><a class="text-sm text-blue-950 hover:text-red-400 uppercase" href="#cta">Contact</a></li>
+            <li><a
+                class="text-sm text-white border border-transparent bg-red-400 uppercase py-2 px-8 rounded-[5px] hover:bg-white hover:text-red-400 hover:border-red-400"
+                href="#">Login</a>
+            </li>
+          </ul>
+        </nav>
+        <button aria-label="Toggle menu" class="cursor-pointer lg:hidden">
+          <img src="./images/icon-hamburger.svg" alt="menu button">
         </button>
       </div>
-    </nav>
+    </header>
+
+    <!-- Hero section -->
+
+    <section id="hero" class="container flex flex-col lg:flex-row mt-10 mx-auto gap-y-12 md:gap-y-0">
+      <!-- Hero img -->
+      <div class="relative overflow-hidden h-75">
+        <img
+          class="absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2 w-[82.7%] h-[68.83%] z-3 md:w-[75.3] drop-shadow-none"
+          src="./images/icon-1.svg" alt="">
+        <div class="absolute bottom-0 w-[153.9%] h-[67.7%] rounded-l-full rounded-r-full bg-blue-600 translate-x-17.5">
+        </div>
+      </div>
+      <!-- Hero article -->
+      <div class="w-full mx-auto">
+        <div class="flex flex-col gap-6 mx-auto w-[83.4%] md:w-[70.3%]">
+          <h1 class="text-[30px] leading-[135%] text-blue-950 text-center font-medium">
+            A Simple Bookmark Manager
+          </h1>
+          <p class="text-[15px] leading-[165%] text-blue-950 text-center font-normal">
+            A clean and simple interface to organize your favourite websites. Open a new
+            browser tab and see your sites load instantly. Try it for free.
+          </p>
+          <div class="w-full flex gap-4 justify-center">
+            <button
+              class="cursor-pointer w-37.5 h-12 border border-transparent rounded-[5px] bg-blue-600 text-[15px] leading-[200%] font-medium text-white hover:bg-white hover:text-blue-600 hover:border-blue-600">
+              Get it on Chrome
+            </button>
+            <button
+              class="cursor-pointer w-37.5 h-12 border border-transparent rounded-[5px] bg-gray-50 text-[15px] leading-[200%] font-medium hover:bg-white hover:text-gray-600 hover:border-gray-600">
+              Get it on Firefox
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
+
+
+
   <!-- 
   Features
   Pricing
   Contact
   Login
 
-  A Simple Bookmark Manager
 
-  A clean and simple interface to organize your favourite websites. Open a new
-  browser tab and see your sites load instantly. Try it for free.
 
-  Get it on Chrome
-  Get it on Firefox
+
 
   Features
 
