--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <section id="hero" class="container flex flex-col lg:flex-row mt-10 mx-auto gap-y-12 md:gap-y-0">
       <!-- Hero img -->
-      <div class="relative overflow-hidden h-75">
+      <div class="relative overflow-hidden h-75 md:h-117">
         <img
           class="absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2 w-[82.7%] h-[68.83%] z-3 md:w-[75.3] drop-shadow-none"
           src="./images/icon-1.svg" alt="">
