--- a/index.html
+++ b/index.html
@@ -41,19 +41,20 @@
 
     <!-- Hero section -->
 
-    <section id="hero" class="container flex flex-col lg:flex-row mt-10 mx-auto gap-y-12 md:gap-y-0">
+    <section id="hero" class="container flex flex-col lg:flex-row mt-10 mx-auto gap-y-12 md:h-211 md:gap-y-18">
       <!-- Hero img -->
       <div class="relative overflow-hidden h-75 md:h-117">
         <img
-          class="absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2 w-[82.7%] h-[68.83%] z-3 md:w-[75.3] drop-shadow-none"
+          class="absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2 w-[82.7%] h-[68.83%] z-3 md:w-[75.3] md:h-96 md:top-0 md:translate-y-0"
           src="./images/icon-1.svg" alt="">
-        <div class="absolute bottom-0 w-[153.9%] h-[67.7%] rounded-l-full rounded-r-full bg-blue-600 translate-x-17.5">
+        <div
+          class="absolute bottom-0 w-[153.9%] h-[67.7%] rounded-l-full rounded-r-full bg-blue-600 translate-x-17.5 md:h-[75.2%] md:w-[130%] md:translate-x-[20%]">
         </div>
       </div>
       <!-- Hero article -->
       <div class="w-full mx-auto">
         <div class="flex flex-col gap-6 mx-auto w-[83.4%] md:w-[70.3%]">
-          <h1 class="text-[30px] leading-[135%] text-blue-950 text-center font-medium">
+          <h1 class="text-[30px] leading-[135%] text-blue-950 text-center font-medium md:text-[48px]">
             A Simple Bookmark Manager
           </h1>
           <p class="text-[15px] leading-[165%] text-blue-950 text-center font-normal">
