--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <body>
   <div class="max-w-360 mx-auto min-h-screen min-w-93.75">
     <header class="w-[83%] md:w-8/10 lg:w-[77%] mx-auto my-10">
-      <div class="container flex flex-row justify-between items-center w-full">
+      <div class="container flex justify-between max-w-full">
         <a href="/">
           <img src="./images/logo-bookmark.svg" alt="logo">
         </a>
-        <nav class="hidden lg:flex w-111.75">
+        <nav class="hidden lg:flex lg:ml-auto w-111.75">
           <ul class="flex w-full gap-12 justify-between">
             <li><a class="text-sm text-blue-950 hover:text-red-400 uppercase" href="#features">Features</a></li>
             <li><a class="text-sm text-blue-950 hover:text-red-400 uppercase" href="#">Pricing</a></li>
@@ -41,7 +41,8 @@
 
     <!-- Hero section -->
 
-    <section id="hero" class="container flex flex-col lg:flex-row mt-10 mx-auto gap-y-12 md:h-211 md:gap-y-18">
+    <section id="hero"
+      class="container max-w-full flex flex-col lg:flex-row mt-10 mx-auto gap-y-12 md:h-211 md:gap-y-18 md:mx-0 lg:h-117 ">
       <!-- Hero img -->
       <div class="relative overflow-hidden h-75 md:h-117">
         <img
