--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <!-- Hero section -->
 
     <section id="hero"
-      class="container max-w-full flex flex-col lg:flex-row mt-10 mx-auto gap-y-12 md:h-211 md:gap-y-18 md:mx-0 lg:h-117 ">
+      class="container max-w-full flex flex-col lg:flex-row-reverse mt-10 mx-auto gap-y-12 md:h-211 md:gap-y-18 md:mx-0 lg:max-h-117 lg:max-w-[88.5%] lg:ml-auto">
       <!-- Hero img -->
-      <div class="relative overflow-hidden h-75 md:h-117">
+      <div class="relative overflow-hidden h-75 md:h-117 lg:w-183.75 lg:h-full">
         <img
           class="absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2 w-[82.7%] h-[68.83%] z-3 md:w-[75.3] md:h-96 md:top-0 md:translate-y-0"
           src="./images/icon-1.svg" alt="">
@@ -53,16 +53,16 @@
         </div>
       </div>
       <!-- Hero article -->
-      <div class="w-full mx-auto">
-        <div class="flex flex-col gap-6 mx-auto w-[83.4%] md:w-[70.3%]">
-          <h1 class="text-[30px] leading-[135%] text-blue-950 text-center font-medium md:text-[48px]">
+      <div class="w-full mx-auto lg:max-h-117 lg:w-[42.35%] lg:mx-0 lg:flex lg:items-center">
+        <div class="flex flex-col gap-6 mx-auto w-[83.4%] md:w-[70.3%] lg:mx-0 lg:w-full">
+          <h1 class="text-[30px] leading-[135%] text-blue-950 text-center font-medium md:text-[48px] lg:text-left">
             A Simple Bookmark Manager
           </h1>
-          <p class="text-[15px] leading-[165%] text-blue-950 text-center font-normal">
+          <p class="text-[15px] leading-[165%] text-blue-950 text-center font-normal lg:text-left">
             A clean and simple interface to organize your favourite websites. Open a new
             browser tab and see your sites load instantly. Try it for free.
           </p>
-          <div class="w-full flex gap-4 justify-center">
+          <div class="w-full flex gap-4 justify-center lg:justify-start">
             <button
               class="cursor-pointer w-37.5 h-12 border border-transparent rounded-[5px] bg-blue-600 text-[15px] leading-[200%] font-medium text-white hover:bg-white hover:text-blue-600 hover:border-blue-600">
               Get it on Chrome
