--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- Hero section -->
 
     <section id="hero"
-      class="container max-w-full flex flex-col lg:flex-row-reverse mt-10 mx-auto gap-y-12 md:h-211 md:gap-y-18 md:mx-0 lg:max-h-117 lg:max-w-[88.5%] lg:ml-auto">
+      class="container max-w-full flex flex-col lg:flex-row-reverse my-10 mx-auto gap-y-12 md:h-211 md:gap-y-18 md:mx-0 md:my-20 lg:max-h-117 lg:max-w-[88.5%] lg:ml-auto">
       <!-- Hero img -->
       <div class="relative overflow-hidden h-75 md:h-117 lg:w-183.75 lg:h-full">
         <img
@@ -75,12 +75,53 @@
         </div>
       </div>
     </section>
+
+    <!-- Features section -->
+
+    <section id="features">
+      <div class="w-full flex flex-col gap-8 my-25">
+        <!-- Section header -->
+
+        <div class="flex flex-col gap-4 w-[82.9%] mx-auto">
+          <h2 class="text-center text-[30px] font-normal text-blue-950">
+            Features
+          </h2>
+          <p class="text-center text-[15px] font-normal text-blue-950">
+            Our aim is to make it quick and easy for you to access your favourite websites.
+            Your bookmarks sync between your devices so you can access them on the go.
+          </p>
+        </div>
+        <!-- Features -->
+        <div class="flex flex-flex-col gap-8 lg:flex-row">
+          <!-- features list -->
+          <ul class="w-[82.9%] mx-auto flex flex-col items-center justify-center lg:flex-row">
+            <li
+              class="py-4 w-full text-center border border-l-0 border-r-0 border-t-[#495dcf]/20 border-b-[#495dcf]/20 lg:border-t-0 active:">
+              <a class="text-[15px] leading-[165%] text-blue-950 font-normal hover:text-red-400" href="#">
+                Simple Bookmarking
+              </a>
+            </li>
+            <li class="py-4 w-full text-center border border-l-0 border-r-0 border-t-0 border-b-[#495dcf]/20">
+              <a class="py-4 text-[15px] leading-[165%] text-blue-950 font-normal border-0 hover:text-red-400 target:border-4 border-t-0 border-r-0 border-l-0 border-b-red-400"
+                href="#">
+                Speedy Searching
+              </a>
+            </li>
+            <li class="py-4 w-full text-center border border-l-0 border-r-0 border-t-0 border-b-[#495dcf]/20 ">
+              <a class="text-[15px] leading-[165%] text-blue-950 font-normal hover:text-red-400" href="#">
+                Easy Sharing
+              </a>
+            </li>
+          </ul>
+          <!-- bookmark boxes -->
+        </div>
+      </div>
+    </section>
   </div>
 
 
 
   <!-- 
-  Features
   Pricing
   Contact
   Login
@@ -91,12 +132,9 @@
 
   Features
 
-  Our aim is to make it quick and easy for you to access your favourite websites.
-  Your bookmarks sync between your devices so you can access them on the go.
+ 
 
-  Simple Bookmarking
-  Speedy Searching
-  Easy Sharing
+  
 
   Bookmark in one click
 
