--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <!-- Hero img -->
       <div class="relative overflow-hidden h-75 md:h-117 lg:w-183.75 lg:h-full">
         <img
-          class="absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2 w-[82.7%] h-[68.83%] z-3 md:w-[75.3] md:h-96 md:top-0 md:translate-y-0"
+          class="absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2 w-[82.7%] h-[68.83%] z-3 md:w-[75.3%] md:h-96 md:top-0 md:translate-y-0"
           src="./images/icon-1.svg" alt="">
         <div
           class="absolute bottom-0 w-[153.9%] h-[67.7%] rounded-l-full rounded-r-full bg-blue-600 translate-x-17.5 md:h-[75.2%] md:w-[130%] md:translate-x-[20%]">
@@ -79,7 +79,7 @@
     <!-- Features section -->
 
     <section id="features">
-      <div class="w-full flex flex-col gap-8 my-25">
+      <div class="w-full flex flex-col gap-8 my-25 overflow-hidden">
         <!-- Section header -->
 
         <div class="flex flex-col gap-4 w-[82.9%] mx-auto">
@@ -92,12 +92,13 @@
           </p>
         </div>
         <!-- Features -->
-        <div class="flex flex-flex-col gap-8 lg:flex-row">
+        <div class="flex flex-col lg:flex-row">
           <!-- features list -->
           <ul class="w-[82.9%] mx-auto flex flex-col items-center justify-center lg:flex-row">
             <li
-              class="py-4 w-full text-center border border-l-0 border-r-0 border-t-[#495dcf]/20 border-b-[#495dcf]/20 lg:border-t-0 active:">
-              <a class="text-[15px] leading-[165%] text-blue-950 font-normal hover:text-red-400" href="#">
+              class="py-4 w-full text-center border border-l-0 border-r-0 border-t-[#495dcf]/20 border-b-[#495dcf]/20 lg:border-t-0">
+              <a class="py-4 text-[15px] leading-[165%] text-blue-950 font-normal border-0 hover:text-red-400 target:border-4 border-t-0 border-r-0 border-l-0 border-b-red-400"
+                href="#">
                 Simple Bookmarking
               </a>
             </li>
@@ -108,12 +109,38 @@
               </a>
             </li>
             <li class="py-4 w-full text-center border border-l-0 border-r-0 border-t-0 border-b-[#495dcf]/20 ">
-              <a class="text-[15px] leading-[165%] text-blue-950 font-normal hover:text-red-400" href="#">
+              <a class="py-4 text-[15px] leading-[165%] text-blue-950 font-normal border-0 hover:text-red-400 target:border-4 border-t-0 border-r-0 border-l-0 border-b-red-400"
+                href="#">
                 Easy Sharing
               </a>
             </li>
           </ul>
           <!-- bookmark boxes -->
+          <div class="w-full h-144 flex flex-col gap-8 lg:flex-row mx-auto max-w-full">
+            <!-- Image container -->
+            <div class="w-full relative justify-between  h-70.5 md:h-119.5">
+              <img
+                class="absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2 w-[82.7%] h-[68.83%] z-3 md:w-[69.8%] md:h-96 md:top-0 md:translate-y-0"
+                src="./images/illustration-features-tab-1.svg" alt="">
+              <div
+                class="absolute bottom-0 right-0 -translate-x-20 w-[153.9%] h-[67.7%] rounded-l-full rounded-r-full bg-blue-600 md:h-[75.2%] md:w-[130%]">
+              </div>
+            </div>
+            <div class="flex flex-col w-[82.9%] h-65.5 mx-auto gap-4">
+              <h2 class="text-[30px] text-blue-950 text-center leading-[135%] font-medium">
+                Bookmark in one click
+              </h2>
+              <p class="text-[15px] leading-[165%] text-center text-blue-950 font-normal">
+                Organize your bookmarks however you like. Our simple drag-and-drop interface
+                gives you complete control over how you manage your favourite sites.
+              </p>
+              <div class="flex justify-center">
+                <button class="w-28.5 h-12 rounded-[5px] bg-blue-600 text-white text-[15px] leading-[200%] font-normal">
+                  More Info
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -136,12 +163,9 @@
 
   
 
-  Bookmark in one click
+  
 
-  Organize your bookmarks however you like. Our simple drag-and-drop interface
-  gives you complete control over how you manage your favourite sites.
 
-  More Info
 
   Intelligent search
 
