--- a/index.html
+++ b/index.html
@@ -81,18 +81,17 @@
     <section id="features">
       <div class="w-full flex flex-col gap-8 my-25 overflow-hidden md:gap-18">
         <!-- Section header -->
-
-        <div class="flex flex-col gap-4 w-[82.9%] mx-auto">
-          <h2 class="text-center text-[30px] font-normal text-blue-950">
+        <div class="flex flex-col gap-4 w-[82.9%] mx-auto lg:w-135">
+          <h2 class="text-center text-[30px] font-medium text-blue-950  lg:text-[32px] lg:leading-[125%]">
             Features
           </h2>
-          <p class="text-center text-[15px] font-normal text-blue-950">
+          <p class="text-center text-[15px] leading-[165%] font-normal text-blue-950 md:text-[18px] md:leading-[155%]">
             Our aim is to make it quick and easy for you to access your favourite websites.
             Your bookmarks sync between your devices so you can access them on the go.
           </p>
         </div>
         <!-- Features -->
-        <div class="flex flex-col lg:flex-row">
+        <div class="flex flex-col">
           <!-- features list -->
           <ul class="w-[82.9%] mx-auto flex flex-col items-center justify-center md:flex-row">
             <li
@@ -116,38 +115,44 @@
             </li>
           </ul>
           <!-- bookmark boxes -->
-          <div>
+          <div class="relative w-full h-144 md:h-190.5 lg:h-127">
             <!-- box 1 -->
-            <div class="w-full h-144 flex flex-col gap-8 lg:flex-row mx-auto max-w-full md:h-190.5 md:gap-16">
+            <div
+              class="w-full h-full flex flex-col gap-8 lg:flex-row mx-auto max-w-full md:gap-16 absolute top-0 left-0 opacity-100 lg:gap-0">
               <!-- Image container -->
-              <div class="w-full relative justify-between h-70.5 md:h-119.5">
+              <div class="w-full relative justify-between h-70.5 md:h-119.5 lg:w-[49%] lg:h-full">
                 <img
-                  class="absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2 w-[82.7%] h-[68.83%] z-3 md:w-[69.8%] md:h-[72.4%] md:left-[22%] md:translate-x-0 md:top-[9%] md:translate-y-0"
+                  class="absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2 w-[82.7%] h-[68.83%] z-3 md:w-[69.8%] md:h-[72.4%] md:left-[22%] md:translate-x-0 md:top-[9%] md:translate-y-0 lg:translate-x-14.5 "
                   src="./images/illustration-features-tab-1.svg" alt="">
                 <div
                   class="absolute bottom-0 right-0 -translate-x-20 w-[153.9%] h-[67.7%] rounded-l-full rounded-r-full bg-blue-600 md:h-[75.2%] md:w-[130.2%] md:-translate-x-30">
                 </div>
               </div>
-              <div class="flex flex-col w-[82.9%] h-65.5 mx-auto gap-4 md:gap-6 md:w-[58.6%] md:h-55">
-                <h2
-                  class="text-[30px] text-blue-950 text-center leading-[135%] font-medium md:text-[32px] lading-[125%]">
-                  Bookmark in one click
-                </h2>
-                <p
-                  class="text-[15px] leading-[165%] text-center text-blue-950 font-normal md:text-[18px] md:leading-[155%]">
-                  Organize your bookmarks however you like. Our simple drag-and-drop interface
-                  gives you complete control over how you manage your favourite sites.
-                </p>
-                <div class="flex justify-center">
-                  <button
-                    class="w-28.5 h-12 rounded-[5px] bg-blue-600 text-white text-[15px] leading-[200%] font-normal">
-                    More Info
-                  </button>
+              <!-- Article container -->
+              <div class="flex lg:w-1/2 lg:justify-start items-center lg:pl-30">
+                <div
+                  class="flex flex-col w-[82.9%] h-65.5 mx-auto gap-4 md:gap-6 md:w-[58.6%] md:h-55 lg:w-[75%] lg:h-55 lg:mx-0">
+                  <h2
+                    class="text-[30px] text-blue-950 text-center leading-[135%] font-medium md:text-[32px] md:leading-[125%]">
+                    Bookmark in one click
+                  </h2>
+                  <p
+                    class="text-[15px] leading-[165%] text-center text-blue-950 font-normal md:text-[18px] md:leading-[155%]">
+                    Organize your bookmarks however you like. Our simple drag-and-drop interface
+                    gives you complete control over how you manage your favourite sites.
+                  </p>
+                  <div class="flex justify-center">
+                    <button
+                      class="w-28.5 h-12 rounded-[5px] bg-blue-600 text-white text-[15px] leading-[200%] font-normal">
+                      More Info
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
             <!-- box 2 -->
-            <div class="w-full h-144 flex flex-col gap-8 lg:flex-row mx-auto max-w-full md:h-190.5 md:gap-16">
+            <div
+              class="w-full h-full flex flex-col gap-8 lg:flex-row mx-auto max-w-full md:gap-16 lg:gap-30 absolute top-0 left-0 opacity-0">
               <!-- Image container -->
               <div class="w-full relative justify-between h-70.5 md:h-119.5">
                 <img
@@ -157,9 +162,10 @@
                   class="absolute bottom-0 right-0 -translate-x-20 w-[153.9%] h-[67.7%] rounded-l-full rounded-r-full bg-blue-600 md:h-[75.2%] md:w-[130.2%] md:-translate-x-30">
                 </div>
               </div>
+              <!-- Article container -->
               <div class="flex flex-col w-[82.9%] h-65.5 mx-auto gap-4 md:gap-6 md:w-[58.6%] md:h-55">
                 <h2
-                  class="text-[30px] text-blue-950 text-center leading-[135%] font-medium md:text-[32px] lading-[125%]">
+                  class="text-[30px] text-blue-950 text-center leading-[135%] font-medium md:text-[32px] md:leading-[125%]">
                   Intelligent search
                 </h2>
                 <p
@@ -176,7 +182,8 @@
               </div>
             </div>
             <!-- box 3 -->
-            <div class="w-full h-144 flex flex-col gap-8 lg:flex-row mx-auto max-w-full md:h-190.5 md:gap-16">
+            <div
+              class="w-full h-full flex flex-col gap-8 lg:flex-row mx-auto max-w-full md:gap-16 lg:gap-30 absolute top-0 left-0 opacity-0">
               <!-- Image container -->
               <div class="w-full relative justify-between h-70.5 md:h-119.5">
                 <img
@@ -186,9 +193,10 @@
                   class="absolute bottom-0 right-0 -translate-x-20 w-[153.9%] h-[67.7%] rounded-l-full rounded-r-full bg-blue-600 md:h-[75.2%] md:w-[130.2%] md:-translate-x-30">
                 </div>
               </div>
+              <!-- Article container -->
               <div class="flex flex-col w-[82.9%] h-65.5 mx-auto gap-4 md:gap-6 md:w-[58.6%] md:h-55">
                 <h2
-                  class="text-[30px] text-blue-950 text-center leading-[135%] font-medium md:text-[32px] lading-[125%]">
+                  class="text-[30px] text-blue-950 text-center leading-[135%] font-medium md:text-[32px] md:leading-[125%]">
                   Share your bookmarks
                 </h2>
                 <p
@@ -213,31 +221,10 @@
 
 
   <!-- 
+  Features
   Pricing
   Contact
   Login
-
-
-
-
-
-  Features
-
- 
-
-  
-
-  
-
-
-
-  
-
-
-
-
-
-  More Info
 
   Download the extension
 
