--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <!-- Image container -->
               <div class="w-full relative justify-between h-70.5 md:h-119.5 lg:w-[49%] lg:h-full">
                 <img
-                  class="absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2 w-[82.7%] h-[68.83%] z-3 md:w-[69.8%] md:h-[72.4%] md:left-[22%] md:translate-x-0 md:top-[9%] md:translate-y-0 lg:translate-x-14.5 "
+                  class="absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2 w-[82.7%] h-[68.83%] z-3 md:w-[69.8%] md:h-[72.4%] md:left-[22%] md:translate-x-0 md:top-[9%] md:translate-y-0 lg:translate-x-14.5"
                   src="./images/illustration-features-tab-1.svg" alt="">
                 <div
                   class="absolute bottom-0 right-0 -translate-x-20 w-[153.9%] h-[67.7%] rounded-l-full rounded-r-full bg-blue-600 md:h-[75.2%] md:w-[130.2%] md:-translate-x-30">
@@ -152,66 +152,157 @@
             </div>
             <!-- box 2 -->
             <div
-              class="w-full h-full flex flex-col gap-8 lg:flex-row mx-auto max-w-full md:gap-16 lg:gap-30 absolute top-0 left-0 opacity-0">
+              class="w-full h-full flex flex-col gap-8 lg:flex-row mx-auto max-w-full md:gap-16 absolute top-0 left-0 opacity-0 lg:gap-0">
               <!-- Image container -->
-              <div class="w-full relative justify-between h-70.5 md:h-119.5">
+              <div class="w-full relative justify-between h-70.5 md:h-119.5 lg:w-[49%] lg:h-full">
                 <img
-                  class="absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2 w-[82.7%] h-[68.83%] z-3 md:w-[69.8%] md:h-[72.4%] md:left-[22%] md:translate-x-0 md:top-[9%] md:translate-y-0"
+                  class="absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2 w-[82.7%] h-[68.83%] z-3 md:w-[69.8%] md:h-[72.4%] md:left-[22%] md:translate-x-0 md:top-[9%] md:translate-y-0 lg:translate-x-14.5"
                   src="./images/illustration-features-tab-2.svg" alt="">
                 <div
                   class="absolute bottom-0 right-0 -translate-x-20 w-[153.9%] h-[67.7%] rounded-l-full rounded-r-full bg-blue-600 md:h-[75.2%] md:w-[130.2%] md:-translate-x-30">
                 </div>
               </div>
               <!-- Article container -->
-              <div class="flex flex-col w-[82.9%] h-65.5 mx-auto gap-4 md:gap-6 md:w-[58.6%] md:h-55">
-                <h2
-                  class="text-[30px] text-blue-950 text-center leading-[135%] font-medium md:text-[32px] md:leading-[125%]">
-                  Intelligent search
-                </h2>
-                <p
-                  class="text-[15px] leading-[165%] text-center text-blue-950 font-normal md:text-[18px] md:leading-[155%]">
-                  Our powerful search feature will help you find saved sites in no time at all.
-                  No need to trawl through all of your bookmarks.
-                </p>
-                <div class="flex justify-center">
-                  <button
-                    class="w-28.5 h-12 rounded-[5px] bg-blue-600 text-white text-[15px] leading-[200%] font-normal">
-                    More Info
-                  </button>
+              <div class="flex lg:w-1/2 lg:justify-start items-center lg:pl-30">
+                <div class="flex flex-col w-[82.9%] h-65.5 mx-auto gap-4 md:gap-6 md:w-[58.6%] md:h-55">
+                  <h2
+                    class="text-[30px] text-blue-950 text-center leading-[135%] font-medium md:text-[32px] md:leading-[125%]">
+                    Intelligent search
+                  </h2>
+                  <p
+                    class="text-[15px] leading-[165%] text-center text-blue-950 font-normal md:text-[18px] md:leading-[155%]">
+                    Our powerful search feature will help you find saved sites in no time at all.
+                    No need to trawl through all of your bookmarks.
+                  </p>
+                  <div class="flex justify-center">
+                    <button
+                      class="w-28.5 h-12 rounded-[5px] bg-blue-600 text-white text-[15px] leading-[200%] font-normal">
+                      More Info
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
             <!-- box 3 -->
             <div
-              class="w-full h-full flex flex-col gap-8 lg:flex-row mx-auto max-w-full md:gap-16 lg:gap-30 absolute top-0 left-0 opacity-0">
+              class="w-full h-full flex flex-col gap-8 lg:flex-row mx-auto max-w-full md:gap-16 absolute top-0 left-0 opacity-0 lg:gap-0">
               <!-- Image container -->
-              <div class="w-full relative justify-between h-70.5 md:h-119.5">
+              <div class="w-full relative justify-between h-70.5 md:h-119.5 lg:w-[49%] lg:h-full">
                 <img
-                  class="absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2 w-[82.7%] h-[68.83%] z-3 md:w-[69.8%] md:h-[72.4%] md:left-[22%] md:translate-x-0 md:top-[9%] md:translate-y-0"
+                  class="absolute left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2 w-[82.7%] h-[68.83%] z-3 md:w-[69.8%] md:h-[72.4%] md:left-[22%] md:translate-x-0 md:top-[9%] md:translate-y-0 lg:translate-x-14.5"
                   src="./images/illustration-features-tab-3.svg" alt="">
                 <div
                   class="absolute bottom-0 right-0 -translate-x-20 w-[153.9%] h-[67.7%] rounded-l-full rounded-r-full bg-blue-600 md:h-[75.2%] md:w-[130.2%] md:-translate-x-30">
                 </div>
               </div>
               <!-- Article container -->
-              <div class="flex flex-col w-[82.9%] h-65.5 mx-auto gap-4 md:gap-6 md:w-[58.6%] md:h-55">
-                <h2
-                  class="text-[30px] text-blue-950 text-center leading-[135%] font-medium md:text-[32px] md:leading-[125%]">
-                  Share your bookmarks
-                </h2>
-                <p
-                  class="ttext-[15px] leading-[165%] text-center text-blue-950 font-normal md:text-[18px] md:leading-[155%]">
-                  Easily share your bookmarks and collections with others. Create a shareable
-                  link that you can send at the click of a button.
-                </p>
-                <div class="flex justify-center">
-                  <button
-                    class="w-28.5 h-12 rounded-[5px] bg-blue-600 text-white text-[15px] leading-[200%] font-normal">
-                    More Info
-                  </button>
+              <div class="flex lg:w-1/2 lg:justify-start items-center lg:pl-30">
+                <div class="flex flex-col w-[82.9%] h-65.5 mx-auto gap-4 md:gap-6 md:w-[58.6%] md:h-55">
+                  <h2
+                    class="text-[30px] text-blue-950 text-center leading-[135%] font-medium md:text-[32px] md:leading-[125%]">
+                    Share your bookmarks
+                  </h2>
+                  <p
+                    class="text-[15px] leading-[165%] text-center text-blue-950 font-normal md:text-[18px] md:leading-[155%]">
+                    Easily share your bookmarks and collections with others. Create a shareable
+                    link that you can send at the click of a button.
+                  </p>
+                  <div class="flex justify-center">
+                    <button
+                      class="w-28.5 h-12 rounded-[5px] bg-blue-600 text-white text-[15px] leading-[200%] font-normal">
+                      More Info
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Download section -->
+    <section id="download"
+      class="mb-25 mx-auto flex flex-col w-[82.9%] h-351 gap-10 md:[80%] md:h-110 md:gap-16 lg:w-[62.8%] lg:h-153 lg:gap-12">
+      <!-- Download header -->
+      <div class="flex flex-col gap-4 md:w-[88.3%]">
+        <h2 class="text-[30px] text-blue-950 text-center font-medium leading-[135%]">
+          Download the extension
+        </h2>
+        <p class="text-[15px] text-blue-950 text-center leading-[165%]">
+          We’ve got more browsers in the pipeline. Please do let us know if you’ve
+          got a favourite you’d like us to prioritize.
+        </p>
+      </div>
+
+      <!-- Download content -->
+      <div class="grid grid-cols-1 gap-10 md:grid-cols-3">
+        <!-- Download 1 -->
+        <div class="flex flex-col py-8 rounded-[15px] shadow-[0_10px_20px_-5px] shadow-[#495dcf]/5">
+          <!-- Container -->
+          <div class="flex flex-col items-center gap-8 pb-6 border-b-4 border-dotted border-b-[#495dcf]/20 ">
+            <img class="w-25 h-25" src="./images/logo-chrome.svg" alt="">
+            <div class="flex flex-col gap-2 items-center">
+              <h3 class="text-[24px] text-blue-950 font-medium leading-[200%]">
+                Add to Chrome
+              </h3>
+              <p class="text-[15px] text-blue-950 leading-[165%] font-normal">
+                Minimum version 62
+              </p>
+            </div>
+          </div>
+          <!-- Button -->
+          <div class="flex justify-center mt-6">
+            <button
+              class="w-58 h-12 py-2 bg-blue-600 text-white text-[15px] leading-[200%] font-medium rounded-[5px] border border-transparent hover:text-blue-600 hover:bg-white hover:border-blue-600">
+              Add & Install Extension
+            </button>
+          </div>
+        </div>
+
+
+        <!-- Download 2 -->
+        <div class="flex flex-col py-8 rounded-[15px] shadow-[0_10px_20px_-5px] shadow-[#495dcf]/5">
+          <!-- Container -->
+          <div class="flex flex-col items-center gap-8 pb-6 border-b-4 border-dotted border-b-[#495dcf]/20 ">
+            <img class="w-25 h-25" src="./images/logo-firefox.svg" alt="">
+            <div class="flex flex-col gap-2 items-center">
+              <h3 class="text-[24px] text-blue-950 font-medium leading-[200%]">
+                Add to Firefox
+              </h3>
+              <p class="text-[15px] text-blue-950 leading-[165%] font-normal">
+                Minimum version 55
+              </p>
+            </div>
+          </div>
+          <!-- Button -->
+          <div class="flex justify-center mt-6">
+            <button
+              class=" w-58 h-12 py-2 bg-blue-600 text-white text-[15px] leading-[200%] font-medium rounded-[5px] border border-transparent hover:text-blue-600 hover:bg-white hover:border-blue-600">
+              Add & Install Extension
+            </button>
+          </div>
+        </div>
+        <!-- Download 3 -->
+        <div class="flex flex-col py-8 rounded-[15px] shadow-[0_10px_20px_-5px] shadow-[#495dcf]/5">
+          <!-- Container -->
+          <div class="flex flex-col items-center gap-8 pb-6 border-b-4 border-dotted border-b-[#495dcf]/20 ">
+            <img class="w-25 h-25" src="./images/logo-opera.svg" alt="">
+            <div class="flex flex-col gap-2 items-center">
+              <h3 class="text-[24px] text-blue-950 font-medium leading-[200%]">
+                Add to Opera
+              </h3>
+              <p class="text-[15px] text-blue-950 leading-[165%] font-normal">
+                Minimum version 46
+              </p>
+            </div>
+          </div>
+          <!-- Button -->
+          <div class="flex justify-center mt-6">
+            <button
+              class=" w-58 h-12 py-2 bg-blue-600 text-white text-[15px] leading-[200%] font-medium rounded-[5px] border border-transparent hover:text-blue-600 hover:bg-white hover:border-blue-600">
+              Add & Install Extension
+            </button>
           </div>
         </div>
       </div>
@@ -226,22 +317,15 @@
   Contact
   Login
 
-  Download the extension
 
-  We’ve got more browsers in the pipeline. Please do let us know if you’ve
-  got a favourite you’d like us to prioritize.
+  
 
-  Add to Chrome
-  Minimum version 62
-  Add & Install Extension
+ 
+  
+ 
 
-  Add to Firefox
-  Minimum version 55
-  Add & Install Extension
+ 
 
-  Add to Opera
-  Minimum version 46
-  Add & Install Extension
 
   Frequently Asked Questions
 
