--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               <!-- Article container -->
               <div class="flex lg:w-1/2 lg:justify-start items-center lg:pl-30">
                 <div
-                  class="flex flex-col w-[82.9%] h-65.5 mx-auto gap-4 md:gap-6 md:w-[58.6%] md:h-55 lg:w-[75%] lg:h-55 lg:mx-0">
+                  class="flex flex-col w-[82.9%] h-65.5 mx-auto gap-4 md:gap-6 md:w-112.5 md:h-55 lg:w-[75%] lg:h-55 lg:mx-0">
                   <h2
                     class="text-[30px] text-blue-950 text-center leading-[135%] font-medium md:text-[32px] md:leading-[125%]">
                     Bookmark in one click
@@ -141,7 +141,7 @@
                     Organize your bookmarks however you like. Our simple drag-and-drop interface
                     gives you complete control over how you manage your favourite sites.
                   </p>
-                  <div class="flex justify-center">
+                  <div class="flex justify-center m:mb-4">
                     <button
                       class="w-28.5 h-12 rounded-[5px] bg-blue-600 text-white text-[15px] leading-[200%] font-normal">
                       More Info
@@ -164,7 +164,7 @@
               </div>
               <!-- Article container -->
               <div class="flex lg:w-1/2 lg:justify-start items-center lg:pl-30">
-                <div class="flex flex-col w-[82.9%] h-65.5 mx-auto gap-4 md:gap-6 md:w-[58.6%] md:h-55">
+                <div class="flex flex-col w-[82.9%] h-65.5 mx-auto gap-4 md:gap-6 md:w-112.5 md:h-55">
                   <h2
                     class="text-[30px] text-blue-950 text-center leading-[135%] font-medium md:text-[32px] md:leading-[125%]">
                     Intelligent search
@@ -197,7 +197,7 @@
               </div>
               <!-- Article container -->
               <div class="flex lg:w-1/2 lg:justify-start items-center lg:pl-30">
-                <div class="flex flex-col w-[82.9%] h-65.5 mx-auto gap-4 md:gap-6 md:w-[58.6%] md:h-55">
+                <div class="flex flex-col w-[82.9%] h-65.5 mx-auto gap-4 md:gap-6 md:w-112.5 md:h-55">
                   <h2
                     class="text-[30px] text-blue-950 text-center leading-[135%] font-medium md:text-[32px] md:leading-[125%]">
                     Share your bookmarks
@@ -223,9 +223,9 @@
 
     <!-- Download section -->
     <section id="download"
-      class="mb-25 mx-auto flex flex-col w-[82.9%] h-351 gap-10 md:[80%] md:h-110 md:gap-16 lg:w-[62.8%] lg:h-153 lg:gap-12">
+      class="max-w-full my-25 mx-auto flex flex-col w-[82.9%] h-351 gap-10 md:w-[79.95%] md:h-110 md:gap-16 lg:w-[62.8%] lg:h-153 lg:gap-12">
       <!-- Download header -->
-      <div class="flex flex-col gap-4 md:w-[88.3%]">
+      <div class="flex flex-col mx-auto gap-4 md:w-135.25 md:h-28">
         <h2 class="text-[30px] text-blue-950 text-center font-medium leading-[135%]">
           Download the extension
         </h2>
@@ -236,7 +236,7 @@
       </div>
 
       <!-- Download content -->
-      <div class="grid grid-cols-1 gap-10 md:grid-cols-3">
+      <div class="grid grid-cols-1 gap-10 md:grid-cols-3 md:gap-2 lg:gap-8">
         <!-- Download 1 -->
         <div class="flex flex-col py-8 rounded-[15px] shadow-[0_10px_20px_-5px] shadow-[#495dcf]/5">
           <!-- Container -->
@@ -262,7 +262,7 @@
 
 
         <!-- Download 2 -->
-        <div class="flex flex-col py-8 rounded-[15px] shadow-[0_10px_20px_-5px] shadow-[#495dcf]/5">
+        <div class="flex flex-col py-8 rounded-[15px] shadow-[0_10px_20px_-5px] shadow-[#495dcf]/5 lg:mt-10">
           <!-- Container -->
           <div class="flex flex-col items-center gap-8 pb-6 border-b-4 border-dotted border-b-[#495dcf]/20 ">
             <img class="w-25 h-25" src="./images/logo-firefox.svg" alt="">
@@ -284,7 +284,7 @@
           </div>
         </div>
         <!-- Download 3 -->
-        <div class="flex flex-col py-8 rounded-[15px] shadow-[0_10px_20px_-5px] shadow-[#495dcf]/5">
+        <div class="flex flex-col py-8 rounded-[15px] shadow-[0_10px_20px_-5px] shadow-[#495dcf]/5 lg:mt-20">
           <!-- Container -->
           <div class="flex flex-col items-center gap-8 pb-6 border-b-4 border-dotted border-b-[#495dcf]/20 ">
             <img class="w-25 h-25" src="./images/logo-opera.svg" alt="">
@@ -306,6 +306,11 @@
           </div>
         </div>
       </div>
+    </section>
+
+    <!-- Frequently asked questions -->
+    <section id="faq" class="mx-auto flex flex-col gap-14 w-[82.9%] md:w-135">
+
     </section>
   </div>
 
